--- a/presence/Cargo.toml
+++ b/presence/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
-name = "ptracker"
+name = "presence"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
 bincode = "1.3.3"
-rand = "0.8.5"
 serde = { version = "1.0.216", features = ["derive"] }
 
 [dev-dependencies]
+rand = "0.8.5"
 tempfile = "3.14.0"
